test/cli/test-generating-policy/clone/generate-secrets-and-networkpolicies/generated-resources.yaml
apiVersion: v1
data:
  foo: YmFy
kind: Secret
metadata:
  name: test-secret-1
  namespace: test-ns
type: Opaque
--- 
apiVersion: v1
data:
  key: dmFsdWU=
kind: Secret
metadata:
  name: test-secret-2
  namespace: test-ns
type: Opaque
---
apiVersion: v1
data:
  color: Ymx1ZQ==
kind: Secret
metadata:
  name: test-secret-3
  namespace: test-ns
type: Opaque
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: test-ns
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
